// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > cart > components > CartItemGroupReservation should render accordion 1`] = `
<CardListItem>
  <Accordion
    className="sg-i7tpew-accordionToggle"
    renderLabel={[Function]}
  >
    <div
      className="sg-h5vm8p-addressDetails"
    >
      <StoreOpeningHours />
      <StorePhoneNumber
        phone="012456789"
      />
    </div>
  </Accordion>
</CardListItem>
`;

exports[`engage > cart > components > CartItemGroupReservation should render accordion 2`] = `
<CartItemGroupReservationLabel
  fulfillmentMethod="BOPIS"
  location={
    {
      "address": {
        "phoneNumber": "012456789",
      },
      "name": "Location name",
    }
  }
/>
`;

exports[`engage > cart > components > CartItemGroupReservation should render only label 1`] = `
<CardListItem
  className="sg-148h0d1-simpleLabel"
>
  <CartItemGroupReservationLabel
    fulfillmentMethod="BOPIS"
    location={
      {
        "name": "Location name",
      }
    }
  />
</CardListItem>
`;
